# cort

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: API_GUIDE.md
examples/: train_language_model.py
src/cort/: __init__.py
src/cort/core/: __init__.py  coherence.py  config.py
src/cort/layers/: __init__.py  attention.py  cort_layer.py  mixer.py  router.py
src/cort/models/: __init__.py  transformer.py
src/cort/utils/: __init__.py  training.py
tests/: test_core.py  test_layers.py  test_model.py
